--- a/templates/discovery.html
+++ b/templates/discovery.html
@@ -19,9 +19,9 @@
           padding: 0;
           overflow: hidden;
           background-color: #006600;
-          position: fixed; /* Fix the navbar to the top */
-          width: 100%; /* Full width */
-          top: 0; /* Stick it to the top */
+          position: fixed; 
+          width: 100%; 
+          top: 0; 
         }
 
         li {
@@ -44,7 +44,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          padding-top: 50px; /* Add padding to avoid overlap with the fixed navbar */
+          padding-top: 50px; 
         }
 
     </style>
@@ -54,8 +54,9 @@
 <body>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="discovery.html">Discovery</a></li>
-      <li><a class="active" href="profile.html">Profile</a></li>
+      <li><a class="active" href="discovery.html">Discovery</a></li>
+      <li><a href="profile.html">Profile</a></li>
+      <li><a href="addcatch.html">Add catch</a></li>
     </ul>
 
     <div>
