--- a/templates/discovery.html
+++ b/templates/discovery.html
@@ -1,66 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>My Personal Website</title>
-    <link rel="stylesheet" href="styles.css">
+{% extends "base.html" %} {% block title %}Discovery{% endblock %} {% block content
+  %}
 
-    <style>
-        body {
-          font-family: Arial, sans-serif;
-          margin: 0;
-          height: 100vh;
-          display: flex;
-          flex-direction: column;
-        }
-
-        ul {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          overflow: hidden;
-          background-color: #006600;
-          position: fixed; 
-          width: 100%; 
-          top: 0; 
-        }
-
-        li {
-          display: inline-block;
-        }
-
-        li a {
-          display: block;
-          color: white;
-          padding: 14px 16px;
-          text-decoration: none;
-        }
-
-        li a:hover {
-          background-color: #003300;
-        }
-
-        .login-container {
-          flex-grow: 1;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          padding-top: 50px; 
-        }
-
-    </style>
-
-</head>
-
-<body>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a class="active" href="discovery.html">Discovery</a></li>
-      <li><a href="profile.html">Profile</a></li>
-      <li><a href="addcatch.html">Add catch</a></li>
-    </ul>
-
-    <div>
-    </div>
-
-</body>
-</html>
+  {% endblock %}
