--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Sign Up</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
     <style>
         body {
           font-family: Arial, sans-serif;
