--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <ul class="nav-bar">
-    <li><a class="active" href="home">Home</a></li>
+    <li><a class="active" href="/">Home</a></li>
     <li><a href="discovery">Discovery</a></li>
     <li><a href="profile">Profile</a></li>
     <li><a href="addcatch">Add catch</a></li>
+    <li><a href="logout">Logout</a></li>
+
   </ul>
 
   <div class="container">{% block content %} {% endblock %}</div>
