--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,22 @@
 {% extends "base.html" %} {% block title %}Login / Signup{% endblock %} {% block content
   %}
-  <div class="login-container">
+  <form method="POST">
+    <div class="login-container">
     <!-- Login form -->
-    <div>
-      <h2>Login or Sign Up</h2>
-      <div class="form-input">
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" required>
+      <div>
+        <h2>Login or Sign Up</h2>
+        <div class="form-input">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div class="form-input">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <button class="login-button">Log In</button>
+        <button class="signup-button"><a href="signup">Sign Up</a></button>        
       </div>
-      <div class="form-input">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required>
-      </div>
-      <a href="profile" class="login-button">Log In</a>
-      <a href="signup" class="signup-button">Sign Up</a>
-      
     </div>
-  </div>
+  </form>
   {% endblock %}
 
