--- a/templates/login.html
+++ b/templates/login.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Login</title>
-    <style>
-        body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    background-color: #f4f4f4;
-  }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Login / Signup</title>
+<link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
-    <h2>Login</h2>
-    <form action="/login" method="post">
-        <div>
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" required>
+    <form method="POST">
+        <div class="login-container">
+        <!-- Login form -->
+          <div>
+            <h2>Login or Sign Up</h2>
+            <div class="form-input">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-input">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button class="login-button">Log In</button>
+            <button class="signup-button"><a href="signup">Sign Up</a></button>        
+          </div>
         </div>
-        <div>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div>
-            <button type="submit">Log In</button>
-        </div>
-        {% if error %}
-        <p>{{ error }}</p>
-        {% endif %}
-    </form>
+      </form>
 </body>
 </html>
