--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,25 +15,27 @@
 </head>
 
 <body>
-    <div class="signup-container">
-        <!-- Sign Up form -->
-        <h2>Sign Up</h2>
-        <form action="/signup" method="post">
-          <div class="form-input">
-              <label for="username">Username</label>
-              <input type="text" id="username" name="username" required>
+    <form method="POST">
+        <div class="login-container">
+        <!-- Login form -->
+          <div>
+            <h2>Sign Up</h2>
+            <div class="form-input">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="enter username">
+            </div>
+            <div class="form-input">
+                <label for="password">Password</label>
+                <input type="password" id="password1" name="password1" placeholder="enter password">
+            </div>
+            <div class="form-input">
+                <label for="password">Confirm Password</label>
+                <input type="password" id="password2" name="password2" placeholder="re-enter password">
+            </div>
+            <button class="signup-button"><a href="profile" class="signup-button">Sign Up</a></button>        
           </div>
-          <div class="form-input">
-              <label for="password">Password</label>
-              <input type="password" id="password" name="password" required>
-          </div>
-          <div class="form-input">
-              <label for="confirm_password">Confirm Password</label>
-              <input type="password" id="confirm_password" name="confirm_password" required>
-          </div>
-          <button class="signup-button" type="submit">Sign Up</button>
-        </form>
-    </div>
+        </div>
+      </form>
 </body>
 </html>
 
