--- a/templates/signup.html
+++ b/templates/signup.html
@@ -32,7 +32,7 @@
                 <label for="password">Confirm Password</label>
                 <input type="password" id="password2" name="password2" placeholder="re-enter password">
             </div>
-            <button class="signup-button"><a href="profile" class="signup-button">Sign Up</a></button>        
+            <button class="signup-button">Sign Up</button>
           </div>
         </div>
       </form>
