--- a/templates/addcatch.html
+++ b/templates/addcatch.html
@@ -1,25 +1,29 @@
 {% extends "base.html" %} {% block title %}Add Catch{% endblock %} {% block content
   %}
+<form method="POST">
   <div id="catch-form">
     <h2>reel in your catch</h2>
-  <label for="fish-type">Fish type:</label>
-  <input type="text" id="fish-type" name="fish_type">
+    <label for="fish-type">Fish type:</label>
+    <input type="text" id="fish_type" name="fish_type">
 
-  <label for="weight">Weight (lbs):</label>
-  <input type="number" id="weight" name="weight" min="0" step="0.01">
+    <label for="weight">Weight (lbs):</label>
+    <input type="number" id="weight" name="weight" min="0" step="0.01">
 
-  <label for="length">Length (in):</label>
-  <input type="number" id="length" name="length" min="0" step="0.01">
+    <label for="length">Length (in):</label>
+    <input type="number" id="length" name="length" min="0" step="0.01">
 
-  <label for="lure">Lure used:</label>
-  <input type="text" id="lure" name="lure">
+    <label for="lure">Lure used:</label>
+    <input type="text" id="lure" name="lure">
 
-  <label for="map">Location:</label>
-  <div id="map">(Map)</div>
+    <label for="location">Location:</label>
+    <input type="text" id="location" name="location">
 
-  <button type="button" onclick="addCatch()">Add Catch</button>
-</div>
-
+    <label for="map">Location:</label>
+    <div id="map">(Map)</div>
+    
+    <button class="button">Add Catch</button>
+  </div>
+</form>
 
 <script>
 // Placeholder
