google map added to profile and add catch page

--- a/templates/addcatch.html
+++ b/templates/addcatch.html
@@ -20,6 +20,17 @@
 
     <label for="map">Location:</label>
     <div id="map">(Map)</div>
+    <script>
+      (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
+        key: "AIzaSyC3fZlB3CcfUZYXEdUnHtsbey6saPW6R2Q",
+        v: "weekly",
+        // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
+        // Add other bootstrap parameters as needed, using camel case.
+      });
+    </script>
+    <input type="hidden" id="latitude" name="latitude">
+    <input type="hidden" id="longitude" name="longitude">
+    
     
     <button class="button">Add Catch</button>
   </div>
@@ -28,7 +39,13 @@
 <script>
 // Placeholder
 function addCatch() {
-alert('Catch Added!');
+
+  var fishType = document.getElementById('fish-type').value;
+  var weight = document.getElementById('weight').value;
+  var length = document.getElementById('length').value;
+  var lure = document.getElementById('lure').value;
+    
+    alert('Catch Added!');
 }
 </script>
   {% endblock %}
