--- a/templates/login.html
+++ b/templates/login.html
@@ -14,11 +14,11 @@
         <h2>Login or Sign Up</h2>
           <div class="form-input">
             <label for="username">Username</label>
-            <input type="text" id="username" name="username" required>
+            <input type="text" id="username" name="username" placeholder="enter username" required>
           </div>
           <div class="form-input">
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" placeholder="enter password" required>
           </div>
           <button class="login-button">Log In</button>
           <button class="signup-button"><a href="signup">Sign Up</a></button>        
