--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,15 +22,15 @@
             <h2>Sign Up</h2>
             <div class="form-input">
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" placeholder="enter username">
+                <input type="text" id="username" name="username" placeholder="enter username" required>
             </div>
             <div class="form-input">
                 <label for="password">Password</label>
-                <input type="password" id="password1" name="password1" placeholder="enter password">
+                <input type="password" id="password1" name="password1" placeholder="enter password" required>
             </div>
             <div class="form-input">
                 <label for="password">Confirm Password</label>
-                <input type="password" id="password2" name="password2" placeholder="re-enter password">
+                <input type="password" id="password2" name="password2" placeholder="re-enter password" required>
             </div>
             <button class="signup-button">Sign Up</button>
           </div>
