--- a/static/styles.css
+++ b/static/styles.css
@@ -9,8 +9,8 @@ body {
 .nav-bar {
   list-style-type: none;
   margin: 0;
-  padding: 0;
   overflow: hidden;
+  padding: 0px;
   background-color: #006600;
   position: fixed; 
   width: 100%; 
@@ -137,11 +137,19 @@ button {
   margin-top: 10px;
 }
 
+.clear-btn {
+  width: 50%;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
   padding: 20px;
+}
+
+.profile-container {
+  padding-top: 30px;
 }
 
 .catch-card {
@@ -160,3 +168,57 @@ button {
   margin-bottom: 10px;
   color: #555;
 }
+
+.discovery-table-div {
+  margin: auto;
+  width: 50%;
+  padding: 50px;
+}
+
+.discovery-table-div h2 {
+  width: 25%;
+}
+
+.discovery-table  {
+  border-collapse:collapse;
+  border-spacing:0;
+}
+
+.discovery-table td {
+  border-color:black;
+  border-style:solid;
+  border-width:1px;
+  font-family:Arial, sans-serif;
+  font-size:14px;
+  overflow:hidden;
+  padding:10px 5px;
+  word-break:normal;
+}
+
+.discovery-table th {
+  border-color:black;
+  border-style:solid;
+  border-width:1px;
+  font-family:Arial, sans-serif;
+  font-size:14px;
+  font-weight:bold;
+  overflow:hidden;
+  padding:10px 5px;
+  word-break:normal;
+}
+
+.discovery-table .discovery-table-header {
+  border-color:inherit;
+  text-align:left;
+  vertical-align:top
+}
+
+.tg  {border-collapse:collapse;border-color:#ccc;border-spacing:0;margin:0px auto;}
+.tg td{background-color:#fff;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
+  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{background-color:#f0f0f0;border-color:#ccc;border-style:solid;border-width:1px;color:#ffffff;
+  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-0foe{background-color:#006600;border-color:#000000;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-j1id{background-color:#c0c0c0;border-color:#000000;text-align:right;vertical-align:top}
+.tg .tg-f7v4{background-color:#c0c0c0;border-color:#000000;text-align:left;vertical-align:top}
+.tg .tg-ilu6{background-color:#5cb85c;border-color:#000000;color:#000000;text-align:left;vertical-align:top}
