--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{% block title %}Home{% endblock %}</title>
-<link rel="stylesheet" href="static/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}Home{% endblock %}</title>
+  <link rel="stylesheet" href="static/styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script type="module" src="{{ url_for('static', filename='js/addCatch.js')}}"></script>
 </head>
 <body>
   <ul class="nav-bar">
-    <li><a class="active" href="/">Home</a></li>
     <li><a href="discovery">Discovery</a></li>
     <li><a href="profile">Profile</a></li>
     <li><a href="addcatch">Add catch</a></li>
     <li><a href="logout">Logout</a></li>
-
-  </ul>
+  </ul><br>
 
   <div class="container">{% block content %} {% endblock %}</div>
 </body>
