--- a/templates/addcatch.html
+++ b/templates/addcatch.html
@@ -4,19 +4,23 @@
   <div id="catch-form">
     <h2>reel in your catch</h2>
     <label for="fish-type">Fish type:</label>
-    <input type="text" id="fish_type" name="fish_type">
+    <input type="text" id="fish_type" name="fish_type" required>
 
     <label for="weight">Weight (lbs):</label>
-    <input type="number" id="weight" name="weight" min="0" step="0.01">
+    <input type="number" id="weight" name="weight" min="0" step="0.01" required>
 
     <label for="length">Length (in):</label>
-    <input type="number" id="length" name="length" min="0" step="0.01">
+    <input type="number" id="length" name="length" min="0" step="0.01" required>
 
     <label for="lure">Lure used:</label>
-    <input type="text" id="lure" name="lure">
+    <input type="text" id="lure" name="lure" required>
 
     <label for="location">Location:</label>
-    <input type="text" id="location" name="location">
+    <input type="text" id="location" name="location" required>
+
+    <label for="image">Choose an image:</label>
+    <input type="file" id="image" name="image" accept="image/*" required>
+    <button class="button clear-btn" type="button" onclick="clearInput()">clear</button>
 
     <label for="map">Location:</label>
     <div id="map">(Map)</div>
@@ -47,5 +51,11 @@ function addCatch() {
     
     alert('Catch Added!');
 }
+</script>
+
+<script>
+  function clearInput() {
+      document.getElementById('image').value = '';
+  }
 </script>
   {% endblock %}
