--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script type="module" src="{{ url_for('static', filename='js/addCatch.js')}}"></script>
+  <script src="/static/js/index.js"></script>
 </head>
 <body>
   <ul class="nav-bar">
