--- a/static/styles.css
+++ b/static/styles.css
@@ -169,6 +169,10 @@ button {
   color: #555;
 }
 
+.discovery-table-div {
+  padding: 50px
+}
+
 .tg  {border-collapse:collapse;border-color:#ccc;border-spacing:0;margin:0px auto;}
 .tg td{background-color:#fff;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
   font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
